--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 submit/model.joblib filter=lfs diff=lfs merge=lfs -text
+model.joblib filter=lfs diff=lfs merge=lfs -text
